--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
-title:               Lanyon
+title:               rupert.k
 tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:         '일에서 재미를 찾아 다닙니다'
 url:                 https://blog.rupert.in
 baseurl:             ''
 paginate:            5
@@ -9,9 +9,9 @@ permalink:           pretty
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              rupert yoonsub kim
+  url:               https://www.linkedin.com/in/rupert-kim/
+  email:             my@rupert.in
 
 # Gems
 plugins:
