--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title:               rupert.k
-tagline:             'A Jekyll theme'
+tagline:             '#개발 #데이터분석 #머신러닝'
 description:         '일에서 재미를 찾아 다닙니다'
 url:                 https://blog.rupert.in
 baseurl:             ''
